--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/NewsViews/GlodBuleHTNewsHomeCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/NewsViews/GlodBuleHTNewsHomeCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -100,7 +100,7 @@
                             <constraint firstAttribute="trailing" secondItem="jEa-fX-HrN" secondAttribute="trailing" id="txm-9C-x1r"/>
                         </constraints>
                     </view>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="置頂" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JIE-zk-eQ0">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="熱門" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JIE-zk-eQ0">
                         <rect key="frame" x="339" y="71.5" width="36" height="18"/>
                         <color key="backgroundColor" red="1" green="0.45496236750000002" blue="0.28701091169999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <accessibility key="accessibilityConfiguration">
@@ -123,6 +123,25 @@
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CzU-BH-lAu" userLabel="timeLongLabel">
+                        <rect key="frame" x="54" y="58" width="40" height="18"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                        </accessibility>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Be8-qC-ZtR"/>
+                            <constraint firstAttribute="height" constant="18" id="hdZ-Zh-k0h"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="6ml-J5-ee8" firstAttribute="leading" secondItem="DS7-JS-6Qq" secondAttribute="trailing" constant="10" id="0m6-Qh-23w"/>
@@ -130,9 +149,11 @@
                     <constraint firstItem="B6J-dW-lBk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="9QS-A5-TWj"/>
                     <constraint firstItem="37n-Op-fX5" firstAttribute="leading" secondItem="hQp-E4-x0f" secondAttribute="trailing" constant="5" id="FE5-yd-a2r"/>
                     <constraint firstAttribute="trailing" secondItem="JIE-zk-eQ0" secondAttribute="trailing" id="FjU-vs-c5t"/>
+                    <constraint firstItem="B6J-dW-lBk" firstAttribute="bottom" secondItem="CzU-BH-lAu" secondAttribute="bottom" constant="4" id="Ixr-DE-ULW"/>
                     <constraint firstItem="UVD-Nd-BAr" firstAttribute="leading" secondItem="DS7-JS-6Qq" secondAttribute="trailing" constant="33" id="MBp-34-FNF"/>
                     <constraint firstItem="RAU-rn-1rC" firstAttribute="leading" secondItem="37n-Op-fX5" secondAttribute="trailing" constant="20" id="RQv-FC-6SG"/>
                     <constraint firstItem="B6J-dW-lBk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="RxA-3s-JMZ"/>
+                    <constraint firstItem="B6J-dW-lBk" firstAttribute="trailing" secondItem="CzU-BH-lAu" secondAttribute="trailing" constant="6" id="SBC-zL-jMt"/>
                     <constraint firstAttribute="trailing" secondItem="rux-4n-Xfp" secondAttribute="trailing" id="YCn-xE-XRI"/>
                     <constraint firstItem="DS7-JS-6Qq" firstAttribute="leading" secondItem="RAU-rn-1rC" secondAttribute="trailing" constant="5" id="dvf-aB-25C"/>
                     <constraint firstItem="Yl0-EM-imW" firstAttribute="leading" secondItem="B6J-dW-lBk" secondAttribute="trailing" constant="8" id="flL-cS-mt8"/>
@@ -153,9 +174,11 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="commentLabel" destination="UVD-Nd-BAr" id="G1G-Ya-VsO"/>
+                <outlet property="news_time_icon" destination="hQp-E4-x0f" id="aTC-0g-eVL"/>
                 <outlet property="shareButtonContentView" destination="6ml-J5-ee8" id="WUg-tR-C12"/>
                 <outlet property="thumbImageView" destination="B6J-dW-lBk" id="rk8-sL-caL"/>
                 <outlet property="timeLabel" destination="37n-Op-fX5" id="VLx-kN-NqJ"/>
+                <outlet property="timeLongLabel" destination="CzU-BH-lAu" id="v7l-K0-6Zf"/>
                 <outlet property="titleLabel" destination="Yl0-EM-imW" id="j8S-T1-ckw"/>
                 <outlet property="topLabel" destination="JIE-zk-eQ0" id="hgd-tS-nHc"/>
                 <outlet property="viewLabel" destination="DS7-JS-6Qq" id="ea0-kC-FN5"/>
