完成比赛相关功能

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/THIM.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/THIM.storyboard
@@ -20,7 +20,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H0c-it-fP4" userLabel="NO IM View">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正在加載中..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPR-60-O2e">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正在連接服務器..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPR-60-O2e">
                                         <rect key="frame" x="137" y="379" width="140" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="140" id="91g-CC-eEj"/>
