--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatContentCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatContentCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,12 +18,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
-                        <rect key="frame" x="44" y="32" width="8" height="28"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="安監局案件二級件案件耳機耳機接耳機額額楠楠難道你的安大男大女難道" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
+                        <rect key="frame" x="44" y="32" width="272" height="28"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="8" id="YBZ-fT-8LX"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -64,7 +61,7 @@
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Esa-4V-scH"/>
                             <constraint firstAttribute="height" constant="26" id="b1K-zQ-OmF"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" systemColor="systemBlueColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -72,6 +69,7 @@
                 <constraints>
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="top" secondItem="rva-BI-H7I" secondAttribute="bottom" constant="4" id="Hap-WQ-IRU"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="JPd-WE-mu1"/>
+                    <constraint firstAttribute="trailing" secondItem="Whj-Qb-IYW" secondAttribute="trailing" constant="4" id="Kw5-q5-iJY"/>
                     <constraint firstAttribute="bottom" secondItem="Whj-Qb-IYW" secondAttribute="bottom" constant="4" id="Usi-sz-KzO"/>
                     <constraint firstItem="rva-BI-H7I" firstAttribute="leading" secondItem="spN-hg-q5E" secondAttribute="trailing" constant="6" id="ZRV-pa-mh8"/>
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="leading" secondItem="rva-BI-H7I" secondAttribute="leading" constant="6" id="gCL-cv-rnC"/>
