--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,11 +18,8 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
-                        <rect key="frame" x="268" y="32" width="8" height="28"/>
+                        <rect key="frame" x="4" y="32" width="272" height="28"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="8" id="YBZ-fT-8LX"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -63,7 +60,7 @@
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Esa-4V-scH"/>
                             <constraint firstAttribute="height" constant="26" id="b1K-zQ-OmF"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="1" green="0.41866918103886386" blue="0.25039816261491032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -72,6 +69,7 @@
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="top" secondItem="rva-BI-H7I" secondAttribute="bottom" constant="4" id="Hap-WQ-IRU"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-2" id="JPd-WE-mu1"/>
                     <constraint firstAttribute="bottom" secondItem="Whj-Qb-IYW" secondAttribute="bottom" constant="4" id="Usi-sz-KzO"/>
+                    <constraint firstItem="Whj-Qb-IYW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="Z53-bQ-Z0V"/>
                     <constraint firstItem="rva-BI-H7I" firstAttribute="trailing" secondItem="spN-hg-q5E" secondAttribute="leading" constant="-6" id="ZRV-pa-mh8"/>
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="trailing" secondItem="rva-BI-H7I" secondAttribute="trailing" constant="-6" id="gCL-cv-rnC"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="jsy-Mi-oRF"/>
