球員信息頁面添加保存圖片按鈕

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/PlayerInfo.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/PlayerInfo.storyboard
@@ -17,11 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2N5-4J-cqb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2N5-4J-cqb">
+                                <rect key="frame" x="0.0" y="44" width="414" height="820"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhn-it-Xvg" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fhn-it-Xvg" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="820"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3le-S8-mjY" userLabel="HeadView">
                                                 <rect key="frame" x="20" y="8" width="374" height="100"/>
