--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMe/MeViews/GlodBuleHTLoginAlertView.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMe/MeViews/GlodBuleHTLoginAlertView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -111,16 +111,62 @@
                                 <constraint firstItem="3TV-cX-KQT" firstAttribute="leading" secondItem="n8w-J2-G1G" secondAttribute="leading" id="xfr-bq-VH3"/>
                             </constraints>
                         </view>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZY-P7-LY1" userLabel="saveView">
+                            <rect key="frame" x="95" y="42.5" width="80" height="82.5"/>
+                            <subviews>
+                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sul-ip-sMN" userLabel="saveButton">
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="82.5"/>
+                                    <connections>
+                                        <action selector="loginAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="AK7-QA-aQp"/>
+                                    </connections>
+                                </button>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_save" translatesAutoresizingMaskIntoConstraints="NO" id="0gv-dO-3VL" customClass="JXImageView">
+                                    <rect key="frame" x="17" y="5" width="46" height="46"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="46" id="DQH-Cp-WT4"/>
+                                        <constraint firstAttribute="height" constant="46" id="Gx4-QP-H42"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="23"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="保存相冊" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bj-TF-WQ8">
+                                    <rect key="frame" x="15.5" y="61" width="49.5" height="14.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="80" id="0D6-at-ob9"/>
+                                <constraint firstAttribute="trailing" secondItem="Sul-ip-sMN" secondAttribute="trailing" id="44R-w5-5kV"/>
+                                <constraint firstItem="Sul-ip-sMN" firstAttribute="leading" secondItem="fZY-P7-LY1" secondAttribute="leading" id="Bju-0F-2kQ"/>
+                                <constraint firstItem="5Bj-TF-WQ8" firstAttribute="top" secondItem="0gv-dO-3VL" secondAttribute="bottom" constant="10" id="Pir-k4-lDN"/>
+                                <constraint firstAttribute="bottom" secondItem="Sul-ip-sMN" secondAttribute="bottom" id="Z9F-2Q-HgR"/>
+                                <constraint firstItem="0gv-dO-3VL" firstAttribute="top" secondItem="fZY-P7-LY1" secondAttribute="top" constant="5" id="aHe-Hu-KQQ"/>
+                                <constraint firstItem="Sul-ip-sMN" firstAttribute="top" secondItem="fZY-P7-LY1" secondAttribute="top" id="ewb-1s-G9z"/>
+                                <constraint firstItem="5Bj-TF-WQ8" firstAttribute="centerX" secondItem="0gv-dO-3VL" secondAttribute="centerX" id="kxh-3C-Hee"/>
+                                <constraint firstItem="0gv-dO-3VL" firstAttribute="centerX" secondItem="fZY-P7-LY1" secondAttribute="centerX" id="q9J-jk-aDV"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="fZY-P7-LY1" firstAttribute="top" secondItem="n8w-J2-G1G" secondAttribute="top" id="21b-fs-Ed6"/>
                         <constraint firstItem="n8w-J2-G1G" firstAttribute="height" secondItem="1e5-nc-zBw" secondAttribute="height" id="4br-fQ-AsF"/>
+                        <constraint firstItem="fZY-P7-LY1" firstAttribute="leading" secondItem="n8w-J2-G1G" secondAttribute="leading" id="9aU-bX-GaH"/>
                         <constraint firstItem="Pjn-eL-jzR" firstAttribute="top" secondItem="blL-DD-De7" secondAttribute="top" constant="15" id="Cac-We-Ia2"/>
+                        <constraint firstItem="n8w-J2-G1G" firstAttribute="trailing" secondItem="fZY-P7-LY1" secondAttribute="trailing" id="Df0-O5-0U7"/>
                         <constraint firstAttribute="height" constant="140" id="EQp-3F-dn2"/>
                         <constraint firstItem="1e5-nc-zBw" firstAttribute="top" secondItem="Pjn-eL-jzR" secondAttribute="bottom" constant="8" id="Jjs-Kn-6zf"/>
                         <constraint firstItem="1e5-nc-zBw" firstAttribute="leading" secondItem="blL-DD-De7" secondAttribute="leading" constant="15" id="PQF-X4-FYb"/>
                         <constraint firstItem="n8w-J2-G1G" firstAttribute="leading" secondItem="1e5-nc-zBw" secondAttribute="trailing" id="YrM-7N-D6s"/>
                         <constraint firstItem="Pjn-eL-jzR" firstAttribute="centerX" secondItem="blL-DD-De7" secondAttribute="centerX" id="can-V3-uBt"/>
+                        <constraint firstItem="n8w-J2-G1G" firstAttribute="bottom" secondItem="fZY-P7-LY1" secondAttribute="bottom" id="evs-XT-nh1"/>
                         <constraint firstItem="n8w-J2-G1G" firstAttribute="centerY" secondItem="1e5-nc-zBw" secondAttribute="centerY" id="jAy-MN-CPO"/>
                         <constraint firstAttribute="bottom" secondItem="1e5-nc-zBw" secondAttribute="bottom" constant="15" id="zBD-O8-hTd"/>
                     </constraints>
@@ -144,6 +190,7 @@
                 <outlet property="lineLoginImageView" destination="sly-cX-68S" id="FXY-pk-9ls"/>
                 <outlet property="lineView" destination="n8w-J2-G1G" id="uAX-jD-r7c"/>
                 <outlet property="safeBackView" destination="B7I-Vt-lgu" id="ISx-1o-Qnk"/>
+                <outlet property="saveView" destination="fZY-P7-LY1" id="BpT-TD-r59"/>
                 <outlet property="titleLabel" destination="Pjn-eL-jzR" id="XVr-Wx-Lom"/>
             </connections>
             <point key="canvasLocation" x="139" y="80"/>
@@ -152,5 +199,6 @@
     <resources>
         <image name="icon_facebook" width="38" height="38"/>
         <image name="icon_line" width="38" height="38"/>
+        <image name="icon_save" width="38" height="38"/>
     </resources>
 </document>
